--- a/app/src/main/res/layout/activity_multi_player.xml
+++ b/app/src/main/res/layout/activity_multi_player.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/Playbackground"
+    android:background="@drawable/playbackground"
     tools:context=".MultiPlayerActivity">
 
 </android.support.constraint.ConstraintLayout>
