--- a/app/src/main/res/layout/activity_single_player_difficulty.xml
+++ b/app/src/main/res/layout/activity_single_player_difficulty.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/menubackground"
+    android:background="@drawable/bg_menu"
     android:layout_height="match_parent"
     tools:context=".SinglePlayerDifficulty">
 
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="169dp"
-        android:background="@drawable/btn_easy"
+        android:background="@drawable/button_easy"
         app:layout_constraintBottom_toTopOf="@+id/btn_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -23,7 +23,7 @@
         android:id="@+id/btn_medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/btn_medium"
+        android:background="@drawable/button_medium"
         app:layout_constraintBottom_toTopOf="@+id/btn_hard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="202dp"
-        android:background="@drawable/btn_hard"
+        android:background="@drawable/button_hard"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
