--- a/app/src/main/res/layout/fragment_pause.xml
+++ b/app/src/main/res/layout/fragment_pause.xml
@@ -9,6 +9,6 @@
         android:id="@+id/btn"
         android:layout_width="55dp"
         android:layout_height="55dp"
-        android:background="@drawable/btn_pause" />
+        android:background="@drawable/button_pause" />
 
 </FrameLayout>
