--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,19 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_menu"
     tools:context=".SettingsActivity">
 
     <Button
         android:id="@+id/btn-set-background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="164dp"
-        android:layout_marginLeft="164dp"
-        android:layout_marginTop="213dp"
-        android:layout_marginEnd="131dp"
-        android:layout_marginRight="131dp"
-        android:layout_marginBottom="27dp"
-        android:text="@string/background"
+        android:layout_marginTop="90dp"
+        android:background="@drawable/txt_background"
         app:layout_constraintBottom_toTopOf="@+id/btn-set-avatar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,29 +22,54 @@
         android:id="@+id/btn-set-avatar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="178dp"
-        android:layout_marginLeft="178dp"
-        android:layout_marginEnd="145dp"
-        android:layout_marginRight="145dp"
-        android:text="@string/avatar"
+        android:layout_marginBottom="14dp"
+        android:background="@drawable/txt_avatar"
+        app:layout_constraintBottom_toTopOf="@+id/switch-sound-effect"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="288dp" />
+        app:layout_constraintTop_toBottomOf="@+id/btn-set-background" />
 
     <Switch
         android:id="@+id/switch-sound-effect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/sound_effect"
-        tools:layout_editor_absoluteX="162dp"
-        tools:layout_editor_absoluteY="371dp" />
+        android:layout_width="152dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="119dp"
+        android:layout_marginLeft="119dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="140dp"
+        android:layout_marginRight="140dp"
+        android:layout_marginBottom="32dp"
+        android:checked="false"
+        android:text="@string/sound"
+        app:layout_constraintBottom_toTopOf="@+id/switch-background-music"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn-set-avatar"
+        tools:checked="false" />
 
     <Switch
         android:id="@+id/switch-background-music"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="147dp"
+        android:layout_height="110dp"
+        android:layout_marginStart="119dp"
+        android:layout_marginLeft="119dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="145dp"
+        android:layout_marginRight="145dp"
+        android:layout_marginBottom="144dp"
         android:text="@string/background_music"
-        tools:layout_editor_absoluteX="142dp"
-        tools:layout_editor_absoluteY="433dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/switch-sound-effect" />
+
+    <Button
+        android:id="@+id/btn-goBackMain"
+        android:layout_width="67dp"
+        android:layout_height="81dp"
+        android:background="@drawable/button_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
 
