--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,4 +28,11 @@
         <item name="android:padding">30dp</item>
     </style>
 
+    <style name="BackButton" parent="@style/GameScreen">
+        <item name="android:layout_width">81dp</item>
+        <item name="android:layout_height">68dp</item>
+        <item name="android:layout_marginLeft">30dp</item>
+        <item name="android:layout_marginTop">30dp</item>
+    </style>
+
 </resources>
