--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_menu">
 
+    <!-- TODO: Make button visible:@ -->
+    <Button
+        android:id="@+id/btn_goBack"
+        style="@style/BackButton"
+        android:background="@drawable/button_back" />
+
     <!-- HOME PAGE VIEW -->
     <LinearLayout
         android:id="@+id/view_main_menu"
         style="@style/LLScreen">
-        <!--android:layout_height="@android:dimen/thumbnail_height"-->
-        <!--android:layout_width="@android:dimen/thumbnail_width"-->
 
         <Button
             android:id="@+id/btn_play"
@@ -38,6 +43,7 @@
     <!-- HIGHSCORE VIEW -->
     <LinearLayout
         android:id="@+id/view_highscore"
+        style="@style/LLScreen"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -45,7 +51,8 @@
             android:id="@+id/txt_highscore"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/button_score"/>
+            android:background="@drawable/button_score"
+            android:contentDescription="@string/txt_highscore" />
 
         <!-- TODO: FILL INN HIGHSCORE INFORMATION -->
     </LinearLayout>
@@ -53,18 +60,19 @@
     <!-- SETTINGS VIEW -->
     <LinearLayout
         android:id="@+id/view_settings_menu"
+        style="@style/LLScreen"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <Button
             android:id="@+id/btn_background"
             style="@style/MenuButton"
-            android:background="@drawable/txt_background"/>
+            android:background="@drawable/txt_background" />
 
         <Button
             android:id="@+id/btn_avatar"
             style="@style/MenuButton"
-            android:background="@drawable/txt_avatar"/>
+            android:background="@drawable/txt_avatar" />
 
         <!-- TODO: MODIFY SWITCHES, ADD TEXT TO THEM -->
 
@@ -83,6 +91,7 @@
     <!-- RULES VIEW -->
     <LinearLayout
         android:id="@+id/view_rules"
+        style="@style/LLScreen"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -90,7 +99,8 @@
             android:id="@+id/txt_rules"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/button_rules"/>
+            android:background="@drawable/button_rules"
+            android:contentDescription="@string/txt_rules" />
 
         <!-- TODO: FILL INN RULES INFORMATION -->
 
@@ -99,47 +109,50 @@
     <!-- PLAY GAME VIEW -->
     <LinearLayout
         android:id="@+id/view_play"
+        style="@style/LLScreen"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <Button
             android:id="@+id/btn_play_single"
             style="@style/MenuButton"
-            android:background="@drawable/button_singleplayer"/>
+            android:background="@drawable/button_singleplayer" />
 
         <Button
             android:id="@+id/btn_play_multi"
             style="@style/MenuButton"
-            android:background="@drawable/button_multiplayer"/>
+            android:background="@drawable/button_multiplayer" />
 
     </LinearLayout>
 
     <!-- PLAY SINGLE PLAYER VIEW (EASY, MEDIUM, HARD) -->
     <LinearLayout
         android:id="@+id/view_play_single"
+        style="@style/LLScreen"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <Button
             android:id="@+id/btn_easy"
             style="@style/MenuButton"
-            android:background="@drawable/button_easy"/>
+            android:background="@drawable/button_easy" />
 
         <Button
             android:id="@+id/btn_medium"
             style="@style/MenuButton"
-            android:background="@drawable/button_medium"/>
+            android:background="@drawable/button_medium" />
 
         <Button
             android:id="@+id/btn_hard"
             style="@style/MenuButton"
-            android:background="@drawable/button_hard"/>
+            android:background="@drawable/button_hard" />
 
     </LinearLayout>
 
     <!-- PLAY MULTI-PLAYER VIEW (CREATE / JOIN ROOM -->
     <LinearLayout
         android:id="@+id/view_play_multi"
+        style="@style/LLScreen"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -147,4 +160,4 @@
 
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
