--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,17 +26,23 @@
         <item name="android:visibility">gone</item>
     </style>
 
-    <style name="LLScreen" parent="@style/GameScreen">
+    <style name="CenterScreen" parent="@style/GameScreen">
         <item name="android:orientation">vertical</item>
         <item name="android:gravity">center</item>
         <item name="android:padding">30dp</item>
     </style>
 
+    <style name="TopScreen" parent="@style/GameScreen">
+        <item name="android:orientation">vertical</item>
+        <item name="android:gravity">top</item>
+        <item name="android:padding">60dp</item>
+    </style>
+
     <style name="BackButton" >
-        <item name="android:layout_width">81dp</item>
-        <item name="android:layout_height">68dp</item>
-        <item name="android:layout_marginLeft">30dp</item>
-        <item name="android:layout_marginTop">30dp</item>
+        <item name="android:layout_width">50dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_marginLeft">15dp</item>
+        <item name="android:layout_marginTop">15dp</item>
     </style>
 
 </resources>
