--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,7 +45,7 @@
         <item name="android:layout_marginTop">20dp</item>
     </style>
 
-    <!-- Multi -->
+    <!-- Google Sign In button -->
     <style name="SignInButton">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
