--- a/app/src/main/res/layout/activity_multi_player.xml
+++ b/app/src/main/res/layout/activity_multi_player.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,9 +7,28 @@
     android:background="@drawable/bg_play"
     tools:context=".MultiPlayerActivity">
 
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/button_sign_in"
-        style="@style/SignInButton"
-        tools:layout_editor_absoluteX="142dp"
-        tools:layout_editor_absoluteY="338dp" />
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:id="@+id/view_signIn"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        style="@style/CenterScreen"
+        android:orientation="horizontal">
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/button_sign_in"
+            style="@style/MenuButton"
+            tools:layout_editor_absoluteX="142dp"
+            tools:layout_editor_absoluteY="338dp" />
+
+        <Button
+            android:id="@+id/button_sign_out"
+            style="@style/MenuButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sign_out"/>
+
+    </LinearLayout>
+
+
+
+</FrameLayout>
